RESOLVED FIXED114259
REGRESSION (r147719): Failures in two a11y tests on GTK
https://bugs.webkit.org/show_bug.cgi?id=114259
Summary REGRESSION (r147719): Failures in two a11y tests on GTK
Zan Dobersek
Reported 2013-04-09 03:00:53 PDT
The following two tests started failing after r147719 landed: platform/gtk/accessibility/aria-slider-required-attributes.html platform/gtk/accessibility/combo-box-collapsed-selection-changed.html http://trac.webkit.org/changeset/147719 Specifically, the `cache->handleFocusedUIElementChanged` call should be restored (with the comment about Chromium removed/changed). http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&showAllRuns=true&tests=platform%2Fgtk%2Faccessibility%2Faria-slider-required-attributes.html%2Cplatform%2Fgtk%2Faccessibility%2Fcombo-box-collapsed-selection-changed.html
Attachments
Patch (1.64 KB, patch)
2013-04-09 03:06 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2013-04-09 03:06:37 PDT
Zan Dobersek
Comment 2 2013-04-10 00:35:10 PDT
Comment on attachment 197017 [details] Patch Clearing flags on attachment: 197017 Committed r148081: <http://trac.webkit.org/changeset/148081>
Zan Dobersek
Comment 3 2013-04-10 00:35:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.