REGRESSION (r147719): Failures in two a11y tests on GTK https://bugs.webkit.org/show_bug.cgi?id=114259

Reviewed by Ryosuke Niwa.

No new tests - covered by existing tests.

Partially revert r147719, restoring the possible creation of the AXObject cache
and the subsequent call to its handleFocusedUIElementChanged method. Removing this
code caused regressions in accessibility tests on the GTK port, so the comment about
the AXObject cache is adjusted accordingly.

* dom/Document.cpp:
(WebCore::Document::setFocusedNode):


Canonical link: https://commits.webkit.org/132702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148081 268f45cc-cd09-0410-ab3c-d52691b4dbfc